--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <style>
   app-root {
-    background-color: #2C3E50;
+    background-color: #222B32;
     width: 100%;
     height: 100%;
 
