--- a/src/index.html
+++ b/src/index.html
@@ -25,5 +25,28 @@
   <app-root>
     <img src="./assets/puff-loader.svg" />
   </app-root>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script> -->
+  <!-- <script> -->
+	<!-- $(document).ready(function() {
+		$('.has-overlay').each(function(i, e) {
+			$(this).on('mouseenter', function(e) {
+				var radius = $(this).height() > $(this).width() ? $(this).height() : $(this).width();
+				radius *= 1.5;
+				var overlay = $(this).find('.info-overlay');
+				$(overlay).height(radius);
+				$(overlay).width(radius);
+				$(overlay).addClass('active');
+			});
+			$(this).on('mouseleave', function(e) {
+				var radius = 0;
+				// console.log('Hovered! ', radius);
+				var overlay = $(this).find('.info-overlay');
+				$(overlay).height(radius);
+				$(overlay).width(radius);
+				$(overlay).removeClass('active');
+			});
+		});
+	}); -->
+  <!-- </script> -->
 </body>
 </html>
